--- a/java-call-tree-analyzer/.vscode/settings.json
+++ b/java-call-tree-analyzer/.vscode/settings.json
@@ -13,6 +13,7 @@
     ],
     "flake8.args": [
         "--max-line-length=88",
-        "--ignore=E203,E701"
-    ]
+        "--extend-ignore=E203,E701",
+    ],
+    "java.compile.nullAnalysis.mode": "automatic"
 }
