--- a/java-call-tree-analyzer/.gitignore
+++ b/java-call-tree-analyzer/.gitignore
@@ -16,3 +16,10 @@ call-tree-analyzer-*.jar
 *.xlsx
 *.sql
 
+
+# PyInstaller
+#  Usually these files are written by a python script from a template
+#  before PyInstaller builds the exe, so as to inject date/other infos into it.
+*.manifest
+*.spec
+
