--- a/java-call-tree-analyzer/app/build.gradle
+++ b/java-call-tree-analyzer/app/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.10.1'
     
     testImplementation 'org.junit.jupiter:junit-jupiter:5.9.3'
+    testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.10.0'
 }
 
 // Apply a specific Java toolchain to ease working on different environments.
@@ -80,4 +81,9 @@ shadowJar {
 // デフォルトのbuildタスクでshadowJarを実行
 build {
     dependsOn shadowJar
+}
+
+tasks.withType(Test) {
+    useJUnitPlatform()
+    systemProperty 'junit.jupiter.testinstance.lifecycle.default', 'per_class'
 }
