java-call-tree-analyzer: Improve export-excel subcommand

--- a/java-call-tree-analyzer/.gitignore
+++ b/java-call-tree-analyzer/.gitignore
@@ -23,4 +23,9 @@ call-tree-analyzer-*.jar
 *.manifest
 *.spec
 
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
+
 examples/
