--- a/java-call-tree-analyzer/.vscode/settings.json
+++ b/java-call-tree-analyzer/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "java.configuration.updateBuildConfiguration": "automatic",
+    "java.compile.nullAnalysis.mode": "automatic",
     "[python]": {
         "editor.defaultFormatter": "ms-python.black-formatter",
         "editor.formatOnSave": true,
@@ -7,13 +8,15 @@
             "source.organizeImports": "explicit"
         },
     },
-    "isort.args":["--profile", "black"],
+    "isort.args": [
+        "--profile",
+        "black"
+    ],
     "black-formatter.args": [
         "--line-length=88"
     ],
     "flake8.args": [
         "--max-line-length=88",
-        "--extend-ignore=E203,E701",
-    ],
-    "java.compile.nullAnalysis.mode": "automatic"
+        "--extend-ignore=E203,E701,E501",
+    ]
 }
